
# set the include path found by configure
INCLUDES = $(all_includes)

# the library search path.
lib_LIBRARIES = libtuxeip.a
libtuxeip_a_SOURCES = AB.c CIP_IOI.c CM.c ErrCodes.c Ethernet_IP.c LGX.c MR.c\
	PLC.c SendData.c

includedir=$(prefix)/include/tuxeip
include_HEADERS = AB.h CIP_Const.h CIP_IOI.h CIP_Objects.h CIP_Types.h CM.h\
	EIP_Const.h ErrCodes.h Ethernet_IP.h LGX.h MR.h PLC.h SendData.h\
	TuxEip.h

#Headdir = /usr/local/include/tuxeip
#TuxeipHeaderdir = /usr/local/include/tuxeip
#TuxeipHeader_HEADERS =
