

noinst_PROGRAMS = test1 test2 test3 test4 test5
test1_SOURCES = test1.c
test2_SOURCES = test2.c

test2_LDADD = $(top_builddir)/src/libtuxeip.a

test1_LDADD = $(top_builddir)/src/libtuxeip.a
test3_SOURCES = test3.c
test3_LDADD = $(top_builddir)/src/libtuxeip.a
test4_SOURCES = test4.c
test5_SOURCES = test5.c
test5_LDADD = $(top_builddir)/src/libtuxeip.a
test4_LDADD = $(top_builddir)/src/libtuxeip.a
