LDADD=../../nanohttp/libnanohttp.la ../../libcsoap/libcsoap.la
INCLUDES=-I${top_srcdir}

noinst_PROGRAMS=simpleclient simpleserver echoattachments-client echoattachments-server
bin_PROGRAMS=soapclient

simpleclient_SOURCES=simpleclient.c

simpleserver_SOURCES=simpleserver.c

echoattachments_server_SOURCES=echoattachments-server.c

echoattachments_client_SOURCES=echoattachments-client.c

soapclient_SOURCES=soapclient.c

